--- a/recovery/root/init.recovery.usb.rc
+++ b/recovery/root/init.recovery.usb.rc
@@ -4,11 +4,13 @@ on init
     mkdir /sys/kernel/config/usb_gadget/g1/strings/0x409 0770 shell shell
     mkdir /sys/kernel/config/usb_gadget/g1/configs/c.1 0770 shell shell
     mkdir /sys/kernel/config/usb_gadget/g1/configs/c.1/strings/0x409 0770 shell shell
-    mkdir /sys/kernel/config/usb_gadget/g1/functions/ffs.adb 0770 shell shell
     mkdir /sys/kernel/config/usb_gadget/g1/functions/ffs.mtp 0770 shell shell
+    mkdir /sys/kernel/config/usb_gadget/g1/functions/ffs.adb 0770 shell shell
     mkdir /dev/usb-ffs 0770 shell shell
     mkdir /dev/usb-ffs/adb 0770 shell shell
+    mkdir /dev/usb-ffs/mtp 0770 mtp mtp
     mount functionfs adb /dev/usb-ffs/adb uid=2000,gid=2000
+    mount functionfs mtp /dev/usb-ffs/mtp uid=2000,gid=2000
 
 on boot
     write /sys/kernel/config/usb_gadget/g1/strings/0x409/serialnumber ${ro.serialno}
